--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
                 <ul>
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
-                <p>Sizes:</p>
-                <ul>
-                    <li v-for="size in sizes">{{ size }}</li>
-                </ul>
-                <div v-for="variant in variants" :key="variant.variantId">
-                    <p>{{ variant.variantColor }}</p>
+                <div class="color-selector">
+                    <div v-for="variant in variants" :key="variant.variantId" 
+                         @mouseover="updateProduct(variant.variantImage)">
+                        <div class="color-box" :style="{ backgroundColor: variant.variantColor }"></div>
+                        <p>{{ variant.variantColor }}</p>
+                    </div>
+                </div>
+                <div class="cart-actions">
+                    <div class="cart">
+                        <p>Cart({{ cart }})</p>
+                    </div>
+                    <button v-on:click="cart += 1">Add to cart</button>
+                    <button v-on:click="decrementCart">Remove from cart</button>
                 </div>
             </div>
         </div>
