--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <product 
             :premium="premium" 
             @add-to-cart="updateCart"
-        ></product>
+            @remove-from-cart="removeFromCart">
+        </product>
     </div>
 </body>
 </html>
